# aws-bedrock-browser-use

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cdk/: .gitignore  README.md  app.ts  cdk.json  package-lock.json  package.json
cdk/lib/: bedrock-browser-agent-stack.ts
data/knowledge-base/: CVE_data_processing.py  README.md  split_file.sh
infrastructure/: bedrock-task-policy.json  deploy-to-ecr.sh  deploy-to-fargate.sh  update-fargate-service.sh
src/bedrock_agent/: cli.py  web.py
src/bedrock_agent/config/: common_args.py  config.py
src/bedrock_agent/utils/: logging_callback_handler.py  logging_config.py  system_prompt.py
